# FFTMatvec

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  mkdocs.yml  pyproject.toml  readthedocs.yaml
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  getting_started.md  index.md  index.rst  io_format.md  license.md  python_bindings.md  requirements.txt
docs/doxygen/html/: Comm_8hpp.html  Comm_8hpp_source.html  Matrix_8hpp.html  Matrix_8hpp_source.html  Vector_8hpp.html  Vector_8hpp_source.html  annotated.html  classComm-members.html  classComm.html  classMatrix-members.html  classMatrix.html  classVector-members.html  classVector.html  classcli_1_1NumericalBase-members.html  classcli_1_1NumericalBase.html  classcli_1_1Parser-members.html  classcli_1_1Parser.html  classenum__array-members.html  classenum__array.html  classes.html  classnonstd_1_1optional__lite_1_1optional-members.html  classnonstd_1_1optional__lite_1_1optional.html  classnonstd_1_1variants_1_1monostate.html  classnonstd_1_1variants_1_1variant-members.html  classnonstd_1_1variants_1_1variant.html  classprofiler__t-members.html  classprofiler__t.html  cmdparser_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  index.html  matvec_8hpp.html  matvec_8hpp_source.html  menudata.js  namespaceUtils.html  (+179 more)
docs/doxygen/html/search/: all_10.js  all_2.js  all_3.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  namespaces_0.js  searchdata.js
docs/doxygen/latex/: Comm_8hpp.tex  Comm_8hpp_source.tex  Matrix_8hpp.tex  Matrix_8hpp_source.tex  Vector_8hpp.tex  Vector_8hpp_source.tex  annotated.tex  classComm.tex  classMatrix.tex  classVector.tex  classcli_1_1NumericalBase.tex  classcli_1_1Parser.tex  classenum__array.eps  classenum__array.tex  classnonstd_1_1optional__lite_1_1optional.tex  classnonstd_1_1variants_1_1monostate.tex  classnonstd_1_1variants_1_1variant.tex  classprofiler__t.tex  cmdparser_8hpp_source.tex  files.tex  hierarchy.tex  matvec_8hpp.tex  matvec_8hpp_source.tex  namespaceUtils.tex  namespacenonstd_1_1variants_1_1std17.tex  namespaces.tex  profiler_8hpp_source.tex  refman.tex  shared_8hpp.tex  shared_8hpp_source.tex  structcli_1_1CallbackArgs.tex  structnonstd_1_1detail_1_1in__place__index__tag.tex  structnonstd_1_1detail_1_1in__place__type__tag.tex  structnonstd_1_1in__place__t.tex  structnonstd_1_1optional__lite_1_1detail_1_1alignment__logic.tex  structnonstd_1_1optional__lite_1_1detail_1_1alignment__of.tex  structnonstd_1_1optional__lite_1_1detail_1_1alignment__of__hack.tex  structnonstd_1_1optional__lite_1_1detail_1_1nulltype.tex  structnonstd_1_1optional__lite_1_1detail_1_1storage__t_1_1aligned__storage__t.tex  structnonstd_1_1optional__lite_1_1detail_1_1struct__t.tex  (+93 more)
docs/doxygen/man/man3/: Comm.3  Comm.hpp.3  Matrix.3  Matrix.hpp.3  Utils.3  Vector.3  Vector.hpp.3  cli_CallbackArgs.3  cli_NumericalBase.3  cli_Parser.3  enum_array.3  matvec.hpp.3  nonstd_detail_in_place_index_tag.3  nonstd_detail_in_place_type_tag.3  nonstd_in_place_t.3  (+102 more)
docs/doxygen/xml/: Comm_8cpp.xml  Comm_8hpp.xml  Doxyfile.xml  Matrix_8cpp.xml  Matrix_8hpp.xml  Vector_8cpp.xml  Vector_8hpp.xml  classComm.xml  classMatrix.xml  classVector.xml  classcli_1_1NumericalBase.xml  classcli_1_1Parser.xml  classcli_1_1Parser_1_1CmdArgument.xml  classcli_1_1Parser_1_1CmdBase.xml  classcli_1_1Parser_1_1CmdFunction.xml  classenum__array.xml  classnonstd_1_1optional__lite_1_1optional.xml  classnonstd_1_1variants_1_1monostate.xml  classnonstd_1_1variants_1_1variant.xml  classprofiler__t.xml  cmdparser_8hpp.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml  main_8cpp.xml  matvec_8cpp.xml  matvec_8hpp.xml  namespaceMatvec.xml  namespaceTester.xml  namespaceUtils.xml  namespacecli.xml  namespacenonstd.xml  namespacenonstd_1_1detail.xml  namespacenonstd_1_1optional__lite.xml  namespacenonstd_1_1optional__lite_1_1detail.xml  namespacenonstd_1_1optional__lite_1_1std11.xml  namespacenonstd_1_1sv__lite.xml  namespacenonstd_1_1variants.xml  namespacenonstd_1_1variants_1_1detail.xml  namespacenonstd_1_1variants_1_1std11.xml  namespacenonstd_1_1variants_1_1std17.xml  (+109 more)
docs/mkdocs/: getting_started.md
docs/sphinx/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/sphinx/.doctrees/: environment.pickle  index.doctree
docs/sphinx/_sources/: index.rst.txt
docs/sphinx/sphinx_source/: Comm.html  LICENSE.html  Matrix.html  Matvec.html  Tester.html  Utils.html  Vector.html  docs.html  getting_started.html  install.html
docs/sphinx_source/: Comm.rst  Matvec.rst  getting_started.rst
src/: CMakeLists.txt  Comm.cpp  Comm.hpp  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp  cmdparser.hpp  comm_error_checkers.h  dendro.h  error_checkers.h  gpu_collectives.hpp  gpu_collectives_mpi_cuda.cpp  gpu_collectives_nccl.cpp  gpu_collectives_rccl.cpp  gpu_collectives_stub.cpp  main.cpp  main.cu  matfuncs.cu  matfuncs.cuh  matvec.cpp  matvec.cu  matvec.cuh  matvec.hpp  multiply.cu  multiply.cuh  precision.hpp  profiler.cpp  profiler.h  profiler.hpp  python_bindings.cpp  reduction.cu  reduction.cuh  shared.cuh  shared.hpp  table.hpp  tester.cpp  tester.hpp  util_kernels.cu  util_kernels.hpp  (+4 more)
src/pyFFTMatvec/: __init__.py
test/: CMakeLists.txt  Comm_test.cpp  gtest-mpi-listener.hpp  test_Comm.cpp  test_Matrix.cpp  test_Matvec.cpp  test_UtilKernels.cpp  test_Utils.cpp  test_Vector.cpp  test_utils.cpp
test/data/: test_obs_vec_SOTI.h5  test_param_vec_SOTI.h5  test_qoi_vec_SOTI.h5  test_vec.h5
test/pyFFTMatvec/: conftest.py  test_fmd.py  test_ones_matvec.py  test_ops.py  test_torch_conversions.py
(+55 files in other folders)
